# vivid-wavetable

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  vivid-package.json
.github/workflows/: smoke.yml
factory_presets/: wavetable_synth.json
graphs/: wavetable_demo.json  wavetable_position_env_demo.json
graphs/core/: wavetable_midi_demo.json
graphs/extended/: wavetable_demo.json  wavetable_position_env_demo.json
src/: wavetable_interp.h  wavetable_synth.cpp
tests/: test_package_manifest.cpp  test_wavetable_position_env.cpp
tests/cpp/: test_wavetable_interp.cpp
tests/graphs/: test_wavetable_position_env.json
